register form fixed and horizontal cropping applied in UploadWidget.js

--- a/wwwroot/css/AdoptionHub.styles.css
+++ b/wwwroot/css/AdoptionHub.styles.css
@@ -6,8 +6,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh
+    min-height: 100vh
 }
+
 .purple{
     --text-primary: #6f42c1;
 }
